--- a/klieu6.gradle
+++ b/klieu6.gradle
@@ -2,13 +2,13 @@ defaultTasks 'jar'
 apply plugin: 'java'
 
 dependencies {
-
+    compile files('lib/resources.jar')
 }
 
 jar {
     manifest {
         attributes(
-                "CLass-Path": "../../lib/resources.jar", "Main-Class": )
+                'CLass-Path': '../../lib/resources.jar', 'Main-Class': 'edu/gatech/oad/antlab/pkg1/AntLabMain')
     }
 }
 
